Finished main functionalities
