# WarehouseApi/Entities/Product.cs
@@ -5,19 +5,11 @@ namespace WarehouseApi.Entities
 {
     public class Product
     {
-        public int Id { get; set; }
-        [Required]
-        public string ProductName { get; set; } = string.Empty;
-        [Required]
+        public int Id { get; set; }        
+        public string ProductName { get; set; } = string.Empty;        
         public string ProductDescription { get; set; } = string.Empty;
 
-        
-        public decimal? Price {  get; set; }
-
-        public Category? Category { get; set; }
-
-        public int CategoryId{ get; set; }
-
-
+        public decimal Price { get; set; }
+        public int? CategoryId {  get; set; }        
     }
 }
