# WarehouseApi/Entities/WarehouseApiContext.cs
@@ -13,23 +13,21 @@ namespace WarehouseApi.Entities
 
         protected override void OnModelCreating(ModelBuilder modelBuilder)
         {
+            modelBuilder.Entity<Category>(eb =>
+            {
+                eb.Property(eb => eb.Name).IsRequired();
+                eb.Property(eb => eb.Description).IsRequired();
+
+                eb.HasMany(e => e.Products).WithOne()
+                .HasForeignKey(e => e.CategoryId).IsRequired();
+            });
             modelBuilder.Entity<Product>(eb =>
             {
                 eb.Property(x => x.ProductName).IsRequired();
                 eb.Property(x=>x.ProductDescription).IsRequired();
                 eb.Property(x => x.Price).HasColumnType("decimal(5,2)");
             });
-            modelBuilder.Entity<Category>(eb =>
-            {
-                eb.Property(eb => eb.Name).IsRequired();
-                eb.Property(eb => eb.Description).IsRequired();
-                eb.HasMany(x => x.Products).WithOne(x => x.Category)
-                .HasForeignKey(x => x.CategoryId);
-                
-            });
-
-            
-
+                     
         }
     }
 }
